# uas_standards

./: .gitmodules  Makefile  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  test.yaml  test_publish.yaml
src/uas_standards/: __init__.py  ansi_cta_2063_a.py  en4709_02.py  eurocae_ed269.py
src/uas_standards/astm/f3411/v19/: api.py
src/uas_standards/astm/f3411/v22a/: api.py  constants.py
src/uas_standards/astm/f3548/v21/: api.py
src/uas_standards/interuss/automated_testing/flight_planning/v1/: api.py
src/uas_standards/interuss/automated_testing/geo_awareness/v1/: api.py
src/uas_standards/interuss/automated_testing/geospatial_map/v1/: api.py
src/uas_standards/interuss/automated_testing/rid/v1/: injection.py  observation.py
src/uas_standards/interuss/automated_testing/scd/v1/: api.py
src/uas_standards/interuss/automated_testing/versioning/: api.py
tests/: test_ansi_cta_2063_a.py  test_en4709_02.py  test_eurocae_ed269.py
tools/openapi_conversion/: convert_openapi_to_implicitdict.py  data_types.py  flattening.py  generate_apis.sh  operations.py  rendering.py
